css/styles2.css
/* CSS Document */
body,
td,
th,
p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  color: #333;
  line-height: 1.5; }

body {
  background-color: #fdfdfd;
  margin: 0;
  position: relative;
  margin-left: auto;
  margin-right: auto; }

ul,
li {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  color: #333; }

a {
  color: #8f5a0a;
  text-decoration: none; }

a:hover,
a:focus {
  color: #3397db;
  text-decoration: none; }

a img {
  border: none 0px #fff; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0 0 20px; }

article,
aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block; }

#maincontent {
  background-color: #f3f3f3;
  min-height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column; }

#footer {
  background-color: #444;
  color: #ccc;
  font-size: 14px;
  letter-spacing: 1px;
  padding: 25px;
  text-align: center;
  text-transform: uppercase; }

#footer a {
    color: #ee9611;
}

/* ====================== Navigation ====================== */
nav {
  width: 100%;
  background-color: #21242c;
  text-align: center; }

nav h1 {
  margin: auto;
  padding: 25px 20px; }

nav h1 a {
  color: #fff;
  font-size: 21px;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase; }

#breadcrumb {
  padding: 10px 40px 16px;
  list-style: none;
  background-color: #eee;
  font-size: 18px;
  font-weight: bold;
  margin: 0;
  max-width: 100%; }

/* Display list items side by side */
#breadcrumb li {
  display: inline; }

/* Add a slash symbol (/) before/behind each list item */
#breadcrumb li + li:before {
  padding: 8px;
  color: black;
  content: "/\00a0"; }

/* Add a color to all links inside the list */
#breadcrumb li a {
  color: #0275d8;
  text-decoration: none; }

/* Add a color on mouse-over */
#breadcrumb li a:hover {
  color: #01447e;
  text-decoration: underline; }

/* ====================== Map ====================== */
#map {
  height: 400px;
  width: 100%; }

/* ====================== Restaurant Filtering ====================== */
.filter-options {
  width: 100%;
  background-color: #3397DB;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center; }

.filter-options h2 {
  color: white;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1;
  margin: 0 20px;
  padding-top: 1em;
  padding-bottom: 1em; }

.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: Arial,sans-serif;
  font-size: 11pt;
  height: 35px;
  letter-spacing: 0;
  margin: 1.2%;
  padding: 0 1%;
  width: 200px; }

.content-container {
  max-width: 1200px;
  margin: auto;
  width: 100%; }

/* ====================== Restaurant Listing ====================== */
#restaurants-list {
  background-color: #f3f3f3;
  list-style: outside none none;
  margin: 0;
  padding: 30px 15px 60px;
  text-align: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap; }

#restaurants-list li {
  background-color: #fff;
  border: 2px solid #ccc;
  font-family: Arial,sans-serif;
  margin: 15px;
  min-height: 380px;
  max-width: 300px;
  padding: 0 0 25px;
  text-align: center;
  min-width: 270px; }

#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  max-width: 100%;
  min-height: 248px;
  min-width: 100%; }

#restaurants-list li h2 {
  color: #4b2900;
  font-family: Arial,sans-serif;
  font-size: 14pt;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase; }

#restaurants-list p {
  margin: 0;
  font-size: 11pt; }

#restaurants-list li a {
  background-color: #8f5a0a;
  border-bottom: 3px solid #eee;
  color: #fff;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase; }

/* ====================== Restaurant Details ====================== */
.inside header {
  /*position: fixed;*/
  top: 0;
  width: 100%;
  z-index: 1000; }

.inside #map-container {
  background: blue none repeat scroll 0 0;
  height: 240px; }

.inside #map {
  background-color: #ccc;
  height: 100%;
  width: 100%; }

.inside #footer {
  bottom: 0; }

#restaurant-name {
  color: #a05700;
  font-family: Arial,sans-serif;
  font-size: 22px;
  font-weight: 300;
  letter-spacing: 0;
  margin: 15px 0 30px;
  text-transform: uppercase;
  line-height: 1.1; }

#restaurant-img {
  width: 100%; }

#restaurant-address {
  font-size: 12pt;
  margin: 10px 0px; }

#restaurant-cuisine {
  background-color: #333;
  color: #ddd;
  font-size: 12pt;
  font-weight: 300;
  letter-spacing: 10px;
  margin: 0 0 20px;
  padding: 2px 0;
  text-align: center;
  text-transform: uppercase; }

#restaurant-container,
#reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
  padding: 10px 40px 30px;
  width: auto; }

#reviews-container {
  padding: 30px 40px 80px; }

#reviews-container h2 {
  color: #a05700;
  font-size: 24pt;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt; }

.favorite-heart {
    display: flex;
    align-content: center;
    padding: 20px;
    text-align: center;
}



/* Heart: https://emojipedia.org/heavy-black-heart/ */

.favButton {
    align-self: flex-start;
    font-size: 42px;
    width: 100%;
    background: #ffffff;
    /*border: 1px solid #666666;*/
    color: #180d00;
    text-align: center;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
}
.favButton:hover,
.favButton:focus{
    background-color: #cccccc;
}

.isFavorite {
    color: red;
    background-color: #f7bbd6;
}
.isNotFavorite {
    color: black;
    background-color: #ffffff;
}




.form-input {
    width: 100%;
    border: 1px solid #4b2900;
    font-size: 1.2em;
}

.form-input option {
    font-size: 2em;
}

.form-label {
    text-align: left;
    line-height: 32px;
}

.add-review {
    margin: auto;
    width: 100%;
    padding: 5px 0 30px 0;
}

.add-review table {
    width: 80%;
    margin: auto;
}

#rating {
    border-radius: 10%;
    color: white;
    background-color: #180d00;
    height: 2.7em;
    margin: 20px;
    font-weight: 500;
    width: auto;
    text-align: center;
    font-size: 1.2rem;
}

.form-send-button {
    
}

#reviews-list {
  margin: 0;
  padding: 0; }

#reviews-list li {
  background-color: #fff;
  border: 2px solid #f3f3f3;
  list-style-type: none;
  padding: 3%;
  margin-bottom: 2%; }

#restaurants-list .restaurant-img {
  display: block;
  margin: 0;
  max-width: 100%; }

#reviews-list li p {
  margin: 0 0 10px; }

#restaurant-hours td {
  color: #666; }

